--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@ html, body, #root {
   font-family: Arial, Helvetica, sans-serif;
   display: flex;
   flex-direction: column;
+  min-height: 100%;
 }
 
 header h1 {
@@ -18,6 +19,7 @@ header h1 {
 .reader-container {
   display: flex;
   flex-wrap: nowrap;
+  flex-grow: 1;
 }
 
 .reader {
@@ -28,11 +30,7 @@ header h1 {
 }
 
 footer {
-  position: fixed;
-  bottom: 0;
-  width: 100vw;
   margin: 20px 0;
-  flex-shrink: 0;
 }
 
 footer small {
