--- a/src/App.css
+++ b/src/App.css
@@ -24,9 +24,44 @@ header h1 {
 
 .reader {
   flex: 1 0 auto;
-  display: inline-block;
   max-width: 480px;
   margin: 0 auto;
+  position: relative;
+}
+
+.compare-action {
+  position: absolute;
+  top: 0;
+  left: 500px;
+  cursor: pointer;
+  margin-right: auto;
+  min-width: 100px;
+  text-align: left;
+  padding: 5px;
+}
+
+.compare-action img {
+  width: 1.5em;
+  height: 1.5em;
+  vertical-align: top;
+  margin-right: 5px;
+  filter: invert(34%) sepia(9%) saturate(4362%) hue-rotate(303deg) brightness(95%) contrast(94%);
+}
+
+.compare-action p {
+  opacity: 0;
+  max-width: 0;
+  transition: max-width 1s ease-out .1s, opacity 1s ease-out .1s;
+  overflow: hidden;
+  display: inline-block;
+  margin: 0;
+  margin-top: 2px;
+  color: #B23E50;
+}
+
+.compare-action:hover p {
+  opacity: 1;
+  max-width: 150px;
 }
 
 footer {
@@ -37,20 +72,18 @@ footer small {
   font-size: x-small;
 }
 
-#file-selector {
+.file-selector {
   margin: 30px;
 }
 
 .part {
- /* border: 1px solid black; */
-    padding: 10px;
-    margin: 20px;
+    padding: 8px;
+    margin: 15px;
     text-align: left;
     word-wrap: break-word;
     border-radius: 5px;
     box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.75);
     background-color: #cccccc3b;
-
 }
 
 .part img {
