--- a/src/App.css
+++ b/src/App.css
@@ -127,3 +127,32 @@ footer small {
   border-color: rgb(0, 230, 118);
   box-shadow: 3px 3px 6px rgba(0, 230, 118, 0.4);
 }
+
+.rawcontent {
+  text-align: left;
+  display: none;
+  position: fixed;
+  flex-direction: column;
+  left: 0;
+  right: 0;
+  margin: auto;
+  top: 5px;
+  padding: 5px;
+  width: 90vw;
+  height: 90vh;
+  background-color: white;
+  z-index: 100;
+  box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.75);
+}
+
+.rawcontent pre {
+  border: 1px solid #ccc;
+  overflow-x: auto;
+  white-space: pre-wrap;
+  white-space: -moz-pre-wrap;
+  white-space: -pre-wrap;
+  white-space: -o-pre-wrap;
+  word-wrap: break-word;
+  font-family: "Courier New", Courier, monospace;
+  background-color: #fafafa;
+}
