--- a/src/App.css
+++ b/src/App.css
@@ -3,14 +3,8 @@ body,
 #root {
   height: 100%;
 }
-
-.App {
+footer {
   text-align: center;
-  margin: auto;
-  font-family: Arial, Helvetica, sans-serif;
-  display: flex;
-  flex-direction: column;
-  min-height: 100%;
 }
 
 header h1 {
@@ -130,7 +124,6 @@ footer small {
 
 .rawcontent {
   text-align: left;
-  display: none;
   position: fixed;
   flex-direction: column;
   left: 0;
@@ -145,7 +138,9 @@ footer small {
   box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.75);
 }
 
-.rawcontent pre {
+pre {
+  margin: 8px;
+  padding: 8px;
   border: 1px solid #ccc;
   overflow-x: auto;
   white-space: pre-wrap;
